unpackaged/objects/User.object
<CustomObject>
  <fields>
    <fullName>SBU_User_Count_INST__c</fullName>
    <formula>User_HQ__c * SBU_Ratio_INST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU User Count (INST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SBU_User_Count_ORTH__c</fullName>
    <formula>User_HQ__c * SBU_Ratio_ORTH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU User Count (ORTH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SBU_User_Count_PREV__c</fullName>
    <formula>User_HQ__c * SBU_Ratio_PREV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU User Count (PREV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SBU_User_Count_PROS__c</fullName>
    <formula>User_HQ__c * SBU_Ratio_PROS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU User Count (PROS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SBU_User_Count_REST__c</fullName>
    <formula>User_HQ__c * SBU_Ratio_REST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU User Count (REST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SBU_User_Count_TRCE__c</fullName>
    <formula>User_HQ__c * SBU_Ratio_TRCE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU User Count (TRCE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SF_Implementation_Level__c</fullName>
    <description>To be used instead of mentioneing "Basic" in the Profile Name. Some profiles might still need to have that tag in their name.</description>
    <label>SF Implementation Level</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Sales Basic</fullName>
        </value>
        <value>
          <fullName>Sales Standard</fullName>
        </value>
        <value>
          <fullName>Sales Advanced</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SR_Origin__c</fullName>
    <label>SR Origin</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Astra Tech</fullName>
        </value>
        <value>
          <fullName>Friadent</fullName>
        </value>
        <value>
          <fullName>Materialise</fullName>
        </value>
        <value>
          <fullName>Dentsply Implants</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Sales_Business_Unit_SBU__c</fullName>
    <label>Strategic Business Unit (SBU)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Shared Services</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Sales_Channel__c</fullName>
    <description>Limited to IMPL at the moment, controled by validation rule to enforce a value when it's an IMPL sales rep and prevent any Value when otherwise</description>
    <inlineHelpText>Use to define if user (i.e. sales representative) belongs to the clinical or lab sales force</inlineHelpText>
    <label>Sales Channel (IMPL)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Clinical Channel</fullName>
        </value>
        <value>
          <fullName>Laboratory Channel</fullName>
        </value>
        <value>
          <fullName>Inhouse Sales</fullName>
        </value>
        <value>
          <fullName>Simplant Channel</fullName>
        </value>
        <value>
          <fullName>Clinical</fullName>
          <isActive>false</isActive>
          <label>Clinical</label>
        </value>
        <value>
          <fullName>Lab</fullName>
          <isActive>false</isActive>
          <label>Lab</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Sales_Quota_2010__c</fullName>
    <label>Sales Quota LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_Quota_CY__c</fullName>
    <description>Used to set Sales Quota for Current Year. Inititially to be used only for Dental Sales Reps.
Please note that Sales Quota should be set for targeted sales against Accounts OWNED by Sales Rep in Movex.</description>
    <inlineHelpText>Used to set Sales Quota in local currency for Current Year. Inititially to be used only for Dental Sales Reps.
Please note that Sales Quota should be set for targeted sales against Accounts OWNED by Sales Rep in Movex.</inlineHelpText>
    <label>Sales Quota CY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_Quota_Q1__c</fullName>
    <description>Created for DI - France</description>
    <label>Sales Quota Q1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_Quota_Q2__c</fullName>
    <description>Created for DI - France</description>
    <label>Sales Quota Q2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Sales_Quota_Q3__c</fullName>
    <description>Created for DI France</description>
    <label>Sales Quota Q3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Service_Cloud_Special_Permissions__c</fullName>
    <label>Service Cloud Special Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Send Survey</fullName>
        </value>
        <value>
          <fullName>Edit Case as Manager</fullName>
        </value>
        <value>
          <fullName>Enable Auto Refresh Automatically</fullName>
        </value>
        <value>
          <fullName>Light Service Cloud</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Team_Setup_ID__c</fullName>
    <label>Team Setup ID</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>User_Country__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Accounting</fullName>
        </value>
        <value>
          <fullName>Account Maintenance</fullName>
        </value>
        <value>
          <fullName>Ambassador</fullName>
        </value>
        <value>
          <fullName>Area Sales Director</fullName>
        </value>
        <value>
          <fullName>Business Analyst</fullName>
        </value>
        <value>
          <fullName>CEREC Application Specialist</fullName>
        </value>
        <value>
          <fullName>CEREC Equipment</fullName>
        </value>
        <value>
          <fullName>Chairside</fullName>
        </value>
        <value>
          <fullName>Clinical Affairs</fullName>
        </value>
        <value>
          <fullName>Clinical Development Manager</fullName>
        </value>
        <value>
          <fullName>Clinical Implementation Specialist</fullName>
        </value>
        <value>
          <fullName>CRM Analyst</fullName>
        </value>
        <value>
          <fullName>CT Application Specialist</fullName>
        </value>
        <value>
          <fullName>Customer Service</fullName>
        </value>
        <value>
          <fullName>Customer Service Consumables</fullName>
        </value>
        <value>
          <fullName>Customer Service Endodontics</fullName>
        </value>
        <value>
          <fullName>Customer Service Implants</fullName>
        </value>
        <value>
          <fullName>Customer Service Implants Contracts</fullName>
        </value>
        <value>
          <fullName>Customer Service Orthodontics</fullName>
        </value>
        <value>
          <fullName>Direct Sales</fullName>
        </value>
        <value>
          <fullName>Distribution</fullName>
        </value>
        <value>
          <fullName>DS Lab</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Finance</fullName>
        </value>
        <value>
          <fullName>Global CRM</fullName>
        </value>
        <value>
          <fullName>Imaging Equipment</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Implants + MIS</fullName>
        </value>
        <value>
          <fullName>Implants MIS</fullName>
        </value>
        <value>
          <fullName>Indirect Sales</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>IT107</fullName>
        </value>
        <value>
          <fullName>IT108</fullName>
        </value>
        <value>
          <fullName>IT109</fullName>
        </value>
        <value>
          <fullName>IT110</fullName>
        </value>
        <value>
          <fullName>IT111</fullName>
        </value>
        <value>
          <fullName>IT113</fullName>
        </value>
        <value>
          <fullName>IT115</fullName>
        </value>
        <value>
          <fullName>IT204</fullName>
        </value>
        <value>
          <fullName>IT206</fullName>
        </value>
        <value>
          <fullName>IT305</fullName>
        </value>
        <value>
          <fullName>IT307</fullName>
        </value>
        <value>
          <fullName>IT308</fullName>
        </value>
        <value>
          <fullName>IT367</fullName>
        </value>
        <value>
          <fullName>IT404</fullName>
        </value>
        <value>
          <fullName>IT503</fullName>
        </value>
        <value>
          <fullName>IT506</fullName>
        </value>
        <value>
          <fullName>IT507</fullName>
        </value>
        <value>
          <fullName>IT508</fullName>
        </value>
        <value>
          <fullName>IT511</fullName>
        </value>
        <value>
          <fullName>IT512</fullName>
        </value>
        <value>
          <fullName>IT513</fullName>
        </value>
        <value>
          <fullName>IT514</fullName>
        </value>
        <value>
          <fullName>IT515</fullName>
        </value>
        <value>
          <fullName>IT517</fullName>
        </value>
        <value>
          <fullName>IT518</fullName>
        </value>
        <value>
          <fullName>IT519</fullName>
        </value>
        <value>
          <fullName>IT520</fullName>
        </value>
        <value>
          <fullName>IT521</fullName>
        </value>
        <value>
          <fullName>IT522</fullName>
        </value>
        <value>
          <fullName>All</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>US_TeleSales_Team_Name__c</fullName>
    <description>Used for US DNA TeleSales Reportin</description>
    <formula>CASE( Manager.Movex_Uer_ID__c , "TL01", "The A Team", "TL02", "Call Stars", "TL03","Stellar Sellers","Dentsply Sirona")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US TeleSales Team Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>UserUnique__c</fullName>
    <description>Field is used to generate unique user counts on various reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field is used to generate unique user counts on various reports</inlineHelpText>
    <label>User Unique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>User_Country_Abbreviation__c</fullName>
    <description>Sets the country abbreviations based on User Country. Note that HQ: DE/ HQ: SE are set as DE/SE as this fields is created for matching user records to cost/revenue transactions in reports</description>
    <formula>CASE( User_Country__c , 
"Australia","AU", 
"Austria","AT", 
"Belgium","BE", 
"Canada","CA", 
"Denmark","DK", 
"DEX","DEX", 
"Finland","FI", 
"Germany","DE", 
"HQ: SE","SE",
"HQ: DE","DE", 
"Luxembourg","LU", 
"Italy","IT", 
"Japan","JP", 
"Holland","NL", 
"New Zealand","NZ", 
"Norway","NO", 
"Poland","PL", 
"Portugal","PT", 
"Spain","ES", 
"Sweden","SE", 
"Switzerland","CH", 
"UK","UK", 
"USA","US", 
"France", "FR", 
null)</formula>
    <inlineHelpText>Sets the country abbreviations based on User Country.</inlineHelpText>
    <label>User Country Abbreviation</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_Country_Code__c</fullName>
    <description>A numeric code that is representing the country 1=Australia, 2= Austria etc. Used in reports</description>
    <formula>CASE( User_Country__c , 
"Australia",01,
"Austria",02,
"Belgium",03,
"Canada",04,
"Denmark",05,
"DEX",06,
"Finland",07,
"Germany",08,
"HQ",09,
"Luxembourg",10,
"Italy",11,
"Japan",12,
"Holland",13,
"New Zealand",14,
"Norway",15,
"Poland",16,
"Portugal",17,
"Spain",18,
"Sweden",19,
"Switzerland",20,
"UK",21,
"USA",22,
"France", 23,
null)</formula>
    <inlineHelpText>A numeric code that is representing the country 1=Australia, 2= Austria etc. Used in reports</inlineHelpText>
    <label>User Country Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>User_Country_Text__c</fullName>
    <formula>Text(User_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Country - Text</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_Country__c</fullName>
    <label>User Country</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Country_Code_full</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>User_HQ__c</fullName>
    <description>Used in reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in reports</inlineHelpText>
    <label>User # (HQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>User_ID_18_digit__c</fullName>
    <description>Used also in ETM</description>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID (18 digit)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_License__c</fullName>
    <description>Display the User License type</description>
    <formula>Profile.UserLicense.Name</formula>
    <label>User License</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_RCO__c</fullName>
    <description>Formula field to set the RCO belonging of a User depending on the user country selected.</description>
    <formula>Case(User_Country__c , 
"Belgium","Northern Group",
"Holland","Northern Group",
"Austria","DACH",
"BEX","Undefinied",
"Germany","DACH",
"Sweden","Northern Group",
"Norway","Northern Group",
"Finland","Northern Group",
"Denmark", "Northern Group",
"HQ: SE", "Non-RCO",
"HQ: DE", "Non-RCO",
"HQ: NL", "Non-RCO", 
"China","APAC",
"Japan","APAC",
"Australia","APAC",
"New Zealand","APAC",
"Korea","APAC",
"South Korea", "APAC",
"Taiwan","APAC",
"Thailand","APAC",
"Hong Kong","APAC",
"Vietnam","APAC",
"Philippines", "APAC",
"Malaysia","APAC",
"Singapore", "APAC",
"Indonesia", "APAC",
"India","Eastern Group",
"Brazil", "LATAM",
"Turkey","Eastern Group",
"Russia","Eastern Group",
"Ukraine","Eastern Group",
"Belarus","Eastern Group",
"U.A.E","Eastern Group",
"Kuwait","Eastern Group",
"Saudi Arabia","Eastern Group",
"Egypt","Eastern Group",
"Poland", "Northern Group",
"South Africa", "Eastern Group",
"Distributor Markets", "Undefinied",
"Canada","North America",
"France", "Southern Group",
"Spain", "Southern Group",
"Italy", "Southern Group",
"Switzerland", "DACH",
"Portugal", "Southern Group",
"UK", "Northern Group",
"USA", "North America",
"Not yet defined")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the RCO belonging of a User depending on the user country selected.</inlineHelpText>
    <label>User RCO</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_Region__c</fullName>
    <formula>Text(Region__c)</formula>
    <label>User Region</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_SBU__c</fullName>
    <description>Used to capture the SBU belonging of a user. It's based on the SBU ratio fields. If no ratio has been assigned "Not Set" will be displayed</description>
    <formula>LEFT(IF( SBU_Ratio_CERE__c &gt;0,"CDCM-","")&amp;IF(SBU_Ratio_PREV__c&gt;0,"PREV-","")&amp;IF(SBU_Ratio_REST__c&gt;0,"REST-","")&amp;IF(SBU_Ratio_ENDO__c&gt;0,"ENDO-","")&amp;IF(SBU_Ratio_PROS__c&gt;0,"PROS-","")&amp;IF(SBU_Ratio_ORTH__c&gt;0,"ORTH-","")&amp;IF(SBU_Ratio_IMPL__c&gt;0,"IMPL-","")&amp;IF(SBU_Ratio_TRCE__c&gt;0,"TRCE-","")&amp;IF(SBU_Ratio_INST__c&gt;0,"INST-","")&amp;IF(SBU_Ratio_IMAG__c&gt;0,"IMAG-","")&amp;IF(SBU_Ratio_CERE__c=0&amp;&amp;SBU_Ratio_PREV__c=0&amp;&amp;SBU_Ratio_REST__c=0&amp;&amp;SBU_Ratio_ENDO__c=0&amp;&amp;SBU_Ratio_PROS__c=0&amp;&amp;SBU_Ratio_ORTH__c=0&amp;&amp;SBU_Ratio_IMPL__c=0&amp;&amp;SBU_Ratio_INST__c=0&amp;&amp;SBU_Ratio_TRCE__c=0&amp;&amp;SBU_Ratio_IMAG__c=0,"Not Set-","Error-"),LEN(IF( SBU_Ratio_CERE__c &gt;0,"CDCM-","")&amp;IF(SBU_Ratio_PREV__c&gt;0,"PREV-","")&amp;IF(SBU_Ratio_REST__c&gt;0,"REST-","")&amp;IF(SBU_Ratio_ENDO__c&gt;0,"ENDO-","")&amp;IF(SBU_Ratio_PROS__c&gt;0,"PROS-","")&amp;IF(SBU_Ratio_ORTH__c&gt;0,"ORTH-","")&amp;IF(SBU_Ratio_IMPL__c&gt;0,"IMPL-","")&amp;IF(SBU_Ratio_TRCE__c&gt;0,"TRCE-","")&amp;IF(SBU_Ratio_INST__c&gt;0,"INST-","")&amp;IF(SBU_Ratio_IMAG__c&gt;0,"IMAG-","")&amp;IF(SBU_Ratio_CERE__c=0&amp;&amp;SBU_Ratio_PREV__c=0&amp;&amp;SBU_Ratio_REST__c=0&amp;&amp;SBU_Ratio_ENDO__c=0&amp;&amp;SBU_Ratio_PROS__c=0&amp;&amp;SBU_Ratio_ORTH__c=0&amp;&amp;SBU_Ratio_IMPL__c=0&amp;&amp;SBU_Ratio_INST__c=0&amp;&amp;SBU_Ratio_TRCE__c=0&amp;&amp;SBU_Ratio_IMAG__c=0,"Not Set-",""))-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to capture the SBU belonging of a user. It's based on the SBU ratio fields. If no ratio has been assigned "Not Set" will be displayed</inlineHelpText>
    <label>User SBU</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_Type__c</fullName>
    <inlineHelpText>Sales Representative  = District Managers, Territory Managers, Account Managers

Sales Manager = Regional Sales Mgrs, Division Sales Mgrs, National Sales Mgrs</inlineHelpText>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Account Maintenance Team Member</fullName>
        </value>
        <value>
          <fullName>Area Sales Manager</fullName>
        </value>
        <value>
          <fullName>Clinical Affairs</fullName>
        </value>
        <value>
          <fullName>Complaints Handling</fullName>
        </value>
        <value>
          <fullName>Customer Service</fullName>
        </value>
        <value>
          <fullName>Finance</fullName>
        </value>
        <value>
          <fullName>Inside Sales Representative</fullName>
        </value>
        <value>
          <fullName>Key Account Manager</fullName>
        </value>
        <value>
          <fullName>Managing Director</fullName>
        </value>
        <value>
          <fullName>Marketing</fullName>
        </value>
        <value>
          <fullName>National Admin</fullName>
        </value>
        <value>
          <fullName>Operations</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Product Manager</fullName>
        </value>
        <value>
          <fullName>Regional Sales Manager</fullName>
        </value>
        <value>
          <fullName>Sales Manager</fullName>
        </value>
        <value>
          <fullName>Sales Representative</fullName>
        </value>
        <value>
          <fullName>Training &amp; Event Management</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>View_All_EA_Products__c</fullName>
    <label>View All EA Products</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>View_All_Wave_Data__c</fullName>
    <label>View All Wave Data</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>WC2012_Country_Market_Target_HQ__c</fullName>
    <description>This field is set for all users but only used for analysis regarding Dental (WC2012). For analysis only. Should never appear in any page layouts</description>
    <formula>IF( ISPICKVAL(Market__c, 'Australia')  ||ISPICKVAL(Market__c,'Benelux')  || ISPICKVAL(Market__c,'NA')  || ISPICKVAL(Market__c,'DEX'), 
 CASE(Market__c, 
'Australia', 30, 
'Benelux', 75,
'NA',450,
'DEX',341,
null), 
 CASE(  User_Country__c , 
'Austria', 46, 
'Denmark', 60,
'Finland',25,
'France',138,
'Germany',200,
'Italy',65,
'Japan',68,
'Norway',100,
'Poland',75,
'Portugal',18,
'Spain',80,
'Sweden',300,
'Switzerland',68,
'UK',100,
null) 
)</formula>
    <inlineHelpText>This field is set for all users but only used for analysis regarding Dental (WC2012). For analysis only</inlineHelpText>
    <label>WC2012 Country/Market Target (HQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Wave_Primary_SBU__c</fullName>
    <label>Wave Primary SBU</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Wave_Territory_Id_1__c</fullName>
    <label>Wave Territory Id 1</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Wave_Territory_Id_2__c</fullName>
    <label>Wave Territory Id 2</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Wave_Territory_Id_3__c</fullName>
    <label>Wave Territory Id 3</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Wave_User_Id__c</fullName>
    <label>Wave User Id</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>q1__c</fullName>
    <label>q1</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
  </fields>
  <listViews>
    <fullName>AT_All_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>User_Type__c</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Country__c</field>
      <operation>equals</operation>
      <value>Austria</value>
    </filters>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>AT: All Users</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>AU_All_Users</fullName>
    <columns>IS_FROZEN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Movex_Uer_ID__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <columns>SBU_Ratio_IMPL__c</columns>
    <columns>Sales_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Country__c</field>
      <operation>equals</operation>
      <value>Australia,New Zealand</value>
    </filters>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>ANZ: All Users</label>
    <language>en_US</language>
    <sharedTo>
      <group>DI_System_Administrators</group>
      <role>AU_Shared_Services</role>
      <roleAndSubordinatesInternal>ANZ_CRM_Analyst</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Asia_All_Users</fullName>
    <columns>User_Country__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>User_Type__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Country__c</field>
      <operation>equals</operation>
      <value>Hong Kong,Taiwan,Malaysia,Philippines,Singapore,Thailand,Vietnam,South Korea</value>
    </filters>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>Asia: All Users</label>
    <language>en_US</language>
    <sharedTo>
      <group>DI_System_Administrators</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>BeneluxUsers</fullName>
    <columns>IS_FROZEN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Product_Area__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Region__c</columns>
    <columns>Movex_Uer_ID__c</columns>
    <columns>User_Country__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Market__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Country__c</field>
      <operation>equals</operation>
      <value>Belgium,Holland,Luxembourg</value>
    </filters>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>Benelux: All Users</label>
    <language>en_US</language>
    <sharedTo>
      <group>Benelux_DI_Admin</group>
      <group>DI_System_Administrators</group>
      <role>Benelux_Shared_Services</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Benelux_Shared_Service</fullName>
    <columns>IS_FROZEN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Product_Area__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>Region__c</columns>
    <columns>Movex_Uer_ID__c</columns>
    <columns>User_Country__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Market__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Country__c</field>
      <operation>equals</operation>
      <value>Belgium,Holland,Luxembourg</value>
    </filters>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>CORE.USER_ROLE.NAME</field>
      <operation>contains</operation>
      <value>shared</value>
    </filters>
    <label>Benelux: Shared Service</label>
    <language>en_US</language>
    <sharedTo>
      <group>Benelux_DI_Admin</group>
      <group>DI_System_Administrators</group>
      <role>Benelux_Shared_Services</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Brasil_Users_2021_07</fullName>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>IS_FROZEN</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>CORE.USERS.ADDRESS_COUNTRY</field>
      <operation>equals</operation>
      <value>Brazil</value>
    </filters>
    <label>Brasil Users 2021 07</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>CHusers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Movex_Uer_ID__c</columns>
    <columns>Product_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Country__c</field>
      <operation>equals</operation>
      <value>Switzerland</value>
    </filters>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>CH: All Users</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>Canada_Frozen_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Country__c</field>
      <operation>equals</operation>
      <value>Canada</value>
    </filters>
    <filters>
      <field>IS_FROZEN</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>Canada Frozen Users</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>DKusers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Movex_Uer_ID__c</columns>
    <columns>Product_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Country__c</field>
      <operation>equals</operation>
      <value>Denmark</value>
    </filters>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>DK: All Users</label>
    <language>en_US</language>
    <sharedTo>
      <group>DI_System_Administrators</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>FRusers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Movex_Uer_ID__c</columns>
    <columns>Product_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Country__c</field>
      <operation>equals</operation>
      <value>France</value>
    </filters>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>FR: All Users</label>
    <language>en_US</language>
    <sharedTo>
      <group>DI_System_Administrators</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Frozen_Users</fullName>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>IS_FROZEN</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>CORE.USERS.ACTIVE</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <label>Active Frozen Users</label>
    <language>en_US</language>
  </listViews>
</CustomObject>